OOZIE-2996 Add options for GC overhead limit error to maven.test.java.opts (dbist13 via andras.piros)